// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`2799.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
$default: #111111 !default;
$default: #111111   !default;
$default: #111111
!default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!default;

$global: #111111 !global;
$global: #111111   !global;
$global: #111111
!global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!global;

=====================================output=====================================
$default: #111111 !default;
$default: #111111 !default;
$default: #111111 !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;

$global: #111111 !global;
$global: #111111 !global;
$global: #111111 !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;

================================================================================
`;

exports[`2799.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
$default: #111111 !default;
$default: #111111   !default;
$default: #111111
!default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!default;

$global: #111111 !global;
$global: #111111   !global;
$global: #111111
!global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!global;

=====================================output=====================================
$default: #111111 !default;
$default: #111111 !default;
$default: #111111 !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;

$global: #111111 !global;
$global: #111111 !global;
$global: #111111 !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;

================================================================================
`;

exports[`19203.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// \`!default\` / \`!global\` inside strings or function arguments are not flags
// and must be left untouched (no stray space injected).
$a: "!default";
$b: "!global";
$c: "x !default";
$d: "x !global";
$e: unquote("!default");
$f: unquote("!global");
$g: url("x!default");
$h: url("x!global");
$i: map-get($map, "!default");
$j: map-get($map, "!global");

// A genuine trailing flag is still detected, even when the value also
// contains the flag text inside a string.
$k: "!default" !default;
$l: "!global" !global;
$m: map-get($map, "!default") !default;
$n: map-get($map, "!global") !global;

// A trailing flag followed by comments is still detected, including when the
// value contains the flag text inside a string.
$o: 1 !default /* trailing comment */;
$p: 1 !global /* trailing comment */;
$q: 1 !default /* c1 */ /* c2 */;
$r: "!default" !default /* trailing comment */;
$s: 1 !default /* multi
line comment */;

// A trailing flag is also detected when the statement has a single-line comment.
$t: 1 !default; // trailing comment
$u: 1 !global; // trailing comment
$v: "!default" !default; // trailing comment

=====================================output=====================================
// \`!default\` / \`!global\` inside strings or function arguments are not flags
// and must be left untouched (no stray space injected).
$a: "!default";
$b: "!global";
$c: "x !default";
$d: "x !global";
$e: unquote("!default");
$f: unquote("!global");
$g: url("x!default");
$h: url("x!global");
$i: map-get($map, "!default");
$j: map-get($map, "!global");

// A genuine trailing flag is still detected, even when the value also
// contains the flag text inside a string.
$k: "!default" !default;
$l: "!global" !global;
$m: map-get($map, "!default") !default;
$n: map-get($map, "!global") !global;

// A trailing flag followed by comments is still detected, including when the
// value contains the flag text inside a string.
$o: 1 !default /* trailing comment */;
$p: 1 !global /* trailing comment */;
$q: 1 !default /* c1 */ /* c2 */;
$r: "!default" !default /* trailing comment */;
$s: 1 !default /* multi
line comment */;

// A trailing flag is also detected when the statement has a single-line comment.
$t: 1 !default; // trailing comment
$u: 1 !global; // trailing comment
$v: "!default" !default; // trailing comment

================================================================================
`;

exports[`19203.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
// \`!default\` / \`!global\` inside strings or function arguments are not flags
// and must be left untouched (no stray space injected).
$a: "!default";
$b: "!global";
$c: "x !default";
$d: "x !global";
$e: unquote("!default");
$f: unquote("!global");
$g: url("x!default");
$h: url("x!global");
$i: map-get($map, "!default");
$j: map-get($map, "!global");

// A genuine trailing flag is still detected, even when the value also
// contains the flag text inside a string.
$k: "!default" !default;
$l: "!global" !global;
$m: map-get($map, "!default") !default;
$n: map-get($map, "!global") !global;

// A trailing flag followed by comments is still detected, including when the
// value contains the flag text inside a string.
$o: 1 !default /* trailing comment */;
$p: 1 !global /* trailing comment */;
$q: 1 !default /* c1 */ /* c2 */;
$r: "!default" !default /* trailing comment */;
$s: 1 !default /* multi
line comment */;

// A trailing flag is also detected when the statement has a single-line comment.
$t: 1 !default; // trailing comment
$u: 1 !global; // trailing comment
$v: "!default" !default; // trailing comment

=====================================output=====================================
// \`!default\` / \`!global\` inside strings or function arguments are not flags
// and must be left untouched (no stray space injected).
$a: "!default";
$b: "!global";
$c: "x !default";
$d: "x !global";
$e: unquote("!default");
$f: unquote("!global");
$g: url("x!default");
$h: url("x!global");
$i: map-get($map, "!default");
$j: map-get($map, "!global");

// A genuine trailing flag is still detected, even when the value also
// contains the flag text inside a string.
$k: "!default" !default;
$l: "!global" !global;
$m: map-get($map, "!default") !default;
$n: map-get($map, "!global") !global;

// A trailing flag followed by comments is still detected, including when the
// value contains the flag text inside a string.
$o: 1 !default /* trailing comment */;
$p: 1 !global /* trailing comment */;
$q: 1 !default /* c1 */ /* c2 */;
$r: "!default" !default /* trailing comment */;
$s: 1 !default /* multi
line comment */;

// A trailing flag is also detected when the statement has a single-line comment.
$t: 1 !default; // trailing comment
$u: 1 !global; // trailing comment
$v: "!default" !default; // trailing comment

================================================================================
`;
